--- a/main.html
+++ b/main.html
@@ -8,10 +8,21 @@
 
 <body>	
 	<script>
-		function secondHighest(arr) {
-			//Write your code here
-			
-		}
+		function secondHighest(arr) 
+		var first=-Infinity;
+			var second=-Infinity;
+			for(let i=0;i<arr.length;i++){
+				if(arr[i]>first){
+					second=first;
+		          first=arr[i];		
+					
+				}else if(arr[i]>second && arr[i]<first){
+					second=arr[i];
+				}
+				//infinity means sabse chta element
+			}
+			return second;
+			}
 
 		function Main() {
 			var n = prompt("Enter the number of elements");
