--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- 
+
 <html>
 
 <head>
@@ -7,7 +7,37 @@
 </head>
 
 <body>	
-	
+	<script>
+		function secondHighest(arr) {
+			//Write your code her
+			var first=-Infinity;
+			var second=-Infinity;
+			for(let i=0;i<arr.length;i++){
+				if(arr[i]>first){
+					second=first;
+		          first=arr[i];		
+					
+				}else if(arr[i]>second && arr[i]<first){
+					second=arr[i];
+				}
+				//infinity means sabse chta element
+			}
+			return second;
+		
+
+		}
+
+		function Main() {
+			var n = prompt("Enter the number of elements");
+			var arr = [];
+			for (var i = 0; i < n; i++) {
+				arr[i] = prompt("Enter element " + (i+1));
+			}
+			alert(secondHighest(arr));
+		}
+		Main();
+	</script>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
